--- a/src/components/layout/navbar/styles/Navbar.css
+++ b/src/components/layout/navbar/styles/Navbar.css
@@ -56,6 +56,11 @@
     color: var(--red-100);
 }
 
+.login-btn {
+    border: none;
+    background: transparent;
+}
+
 .cart-icon {
     width: 22px;
     margin-top: -2px;
@@ -64,6 +69,11 @@
 
 .cart-icon:hover {
     color: var(--red-100);
+}
+
+.cart-btn {
+    border: none;
+    background: transparent;
 }
 
 @media (min-width: 598px) {
