--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
     font-family: var(--mainFont);
     background-color: var(--mainBackground);
+    overflow-x: hidden;
 }
 
 * {
@@ -19,6 +20,20 @@ ul {
 
 a {
     text-decoration: none;
+}
+
+.button {
+    background-color: var(--white-100);
+    padding: 6px;
+    border-radius: 2px;
+    color: var(--black-75);
+    text-align: center;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+    transition: all 0.3s ease-out;
+}
+
+.button:hover {
+    background-color: #dadada;
 }
 
 button:hover {
