View Billing Information

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -32,6 +32,18 @@ input[type=submit] {
     font-family: var(--mainFont);
 }
 
+/* Chrome, Safari, Edge, Opera */
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 select {
     font-family: var(--mainFont);
 }
