--- a/src/styles/utility.css
+++ b/src/styles/utility.css
@@ -56,3 +56,16 @@
     outline: none;
     border-color: var(--white-100);
 }
+
+/* Loader & Error */
+.loader-error {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10em;
+}
+
+.error-title {
+    font-size: 1rem;
+    font-weight: 300;
+}
