--- a/src/views/home/Home.css
+++ b/src/views/home/Home.css
@@ -283,3 +283,36 @@
         grid-template-columns: 30% 70%;
     }
 }
+
+/* Home Loading */
+.home-loading {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    z-index: 1000;
+    margin-top: -5.65em;
+    background: radial-gradient(circle, rgba(32,32,32,1) 0%, rgba(8,8,8,1) 100%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 1;
+    pointer-events: all;
+    transition: all 0.5s ease-out;
+}
+
+.home-loading-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4em;
+}
+
+.home-loading-content img {
+    width: 180px;
+}
+
+.home-loading-content span {
+    position: relative;
+    font-size: 1.2rem;
+    color: #646464;
+}
