Orders - Save orders in Firebase

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -45,6 +45,9 @@ input[type=number] {
 }
 
 select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
     font-family: var(--mainFont);
 }
 
