--- a/src/components/common/viewHeader/ViewHeader.css
+++ b/src/components/common/viewHeader/ViewHeader.css
@@ -21,6 +21,6 @@
 .vhw-line {
     width: 100%;
     height: 2px;
-    border-radius: 50%;
+    border-radius: 1px;
     background-color: var(--viewLines);
 }
