--- a/src/components/layout/navbar/components/loginModal/LoginModal.css
+++ b/src/components/layout/navbar/components/loginModal/LoginModal.css
@@ -64,8 +64,13 @@
 }
 
 .login-submit-btn {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
     border: none;
+    border-radius: 1px;
     background-color: var(--white-100);
+    color: var(--black-75);
     padding: 10px;
     text-transform: uppercase;
     font-size: 1rem;
