--- a/src/views/home/Home.css
+++ b/src/views/home/Home.css
@@ -2,10 +2,13 @@
 .hero-section {
     background-image: url(../../assets/img/others/banner.webp);
     background-size: cover;
-    background-attachment: fixed;
     background-position: center center;
+    background-attachment: fixed;
+    overflow: hidden;
     width: 100%;
+    max-width: 100%;
     height: 100vh;
+    max-height: 100vh;
     display: flex;
     justify-content: flex-start;
     align-items: flex-end;
@@ -22,7 +25,7 @@
 }
 
 .hs-greeting {
-    margin: 3em 2em;
+    margin: 6em 2em;
     display: flex;
     flex-direction: column;
     gap: 1.6em;
@@ -287,7 +290,7 @@
 /* Home Loading */
 .home-loading {
     width: 100%;
-    height: 100vh;
+    height: 105vh;
     position: fixed;
     z-index: 1000;
     margin-top: -5.65em;
