--- a/src/views/shop/Shop.css
+++ b/src/views/shop/Shop.css
@@ -46,7 +46,7 @@
 .smh-line {
     width: 100%;
     height: 2px;
-    border-radius: 50%;
+    border-radius: 1px;
     background-color: var(--viewLines);
 }
 
