--- a/src/components/layout/navbar/components/HamburguerMenuCanvas/HamburguerMenuCanvas.css
+++ b/src/components/layout/navbar/components/HamburguerMenuCanvas/HamburguerMenuCanvas.css
@@ -5,7 +5,6 @@
     background-color: #000000ce;
     z-index: 10;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 5em;
@@ -34,6 +33,50 @@
 
 .nbl-hm {
     font-size: 1.6rem !important;
+}
+
+.nbl-hm-cat {
+    background-color: transparent;
+    border: none;
+}
+
+.main-links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5em;
+    transition: all 0.3s ease-out;
+}
+
+.cat-links {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5em;
+    transform: translateX(100vw);
+    transition: all 0.3s ease-out;
+}
+
+.goback-btn-hm {
+    position: absolute;
+    top: 22px;
+    left: 20px;
+    border: none;
+    background-color: transparent;
+    transform: translateX(-100px);
+    transition: all 0.3s ease-out;
+}
+
+.goback-btn-hm:hover .goback-icon-hm {
+    cursor: pointer;
+    color: #ffffffb4;
+}
+
+.goback-icon-hm {
+    width: 32px;
+    color: var(--white-50);
+    transition: all 0.3s ease-out;
 }
 
 @media (min-width: 598px) {
